--- a/pet/main/idf_component.yml
+++ b/pet/main/idf_component.yml
@@ -2,7 +2,8 @@
 dependencies:
   espressif/esp-dsp: "*"               # DSP库
   espressif/led_strip: "*"
-
+  espressif/esp_codec_dev: "~1.3.0"         # 音频驱动
+  espressif/esp-sr: "~1.6.0"                # 语音识别
 
   ## Required IDF version
   idf:
