修改电机 ws2812 audio 驱动

--- a/pet/main/CMakeLists.txt
+++ b/pet/main/CMakeLists.txt
@@ -7,8 +7,9 @@ idf_component_register(SRCS "main.c"
                             "./driver/key/key.c" 
                             "./driver/ws2812/ws2812.c"
                             "./driver/audio/audio.c"
+                            "./driver/spiffs/app_spiffs.c"
 
 
-INCLUDE_DIRS "." "./WIFI" "./dns_server" "./web_server"   "./driver/hx711" "./driver/motor" "./driver/key" "./driver/ws2812" "./driver/audio"
+INCLUDE_DIRS "." "./WIFI" "./dns_server" "./web_server"   "./driver/hx711" "./driver/motor" "./driver/key" "./driver/ws2812" "./driver/audio" "./driver/spiffs"
 EMBED_FILES "./web_server/index.html"
 )
