--- a/pet/CMakeLists.txt
+++ b/pet/CMakeLists.txt
@@ -4,3 +4,4 @@ cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(pet)
+spiffs_create_partition_image(storage music FLASH_IN_PROJECT)
