--- a/pet/main/idf_component.yml
+++ b/pet/main/idf_component.yml
@@ -1,10 +1,11 @@
 ## IDF Component Manager Manifest File
 dependencies:
   espressif/esp-dsp: "*"               # DSP库
-  espressif/led_strip: "*"
   espressif/esp_codec_dev: "~1.3.0"         # 音频驱动
-  espressif/esp-sr: "~1.6.0"                # 语音识别
-
+  espressif/esp-sr: ">=1.9.0"                # 语音识别
+  chmorgan/esp-audio-player: "~1.0.7"       # 音频播放
+  chmorgan/esp-file-iterator: "1.0.0"       # 获取文件
+  espressif/led_strip: "^2.5.3"
   ## Required IDF version
   idf:
     version: ">=4.1.0"
