测试esp-sr（已验证），增加stt（未验证）

--- a/pet/main/CMakeLists.txt
+++ b/pet/main/CMakeLists.txt
@@ -10,8 +10,10 @@ idf_component_register(SRCS "main.c"
                             "./driver/spiffs/app_spiffs.c"
                             "./driver/audio/hal_i2s.c"
                             "./driver/app_sr/app_sr.c"
+                            "./driver/app_url_encode/app_url_encode.c"
+                            "./driver/http/http_tts.c"
 
 
-INCLUDE_DIRS "." "./WIFI" "./dns_server" "./web_server"   "./driver/hx711" "./driver/motor" "./driver/key" "./driver/ws2812" "./driver/audio" "./driver/spiffs" "./driver/app_sr"
+INCLUDE_DIRS "." "./WIFI" "./dns_server" "./web_server"   "./driver/hx711" "./driver/motor" "./driver/key" "./driver/ws2812" "./driver/audio" "./driver/spiffs" "./driver/app_sr" "./driver/app_url_encode" "./driver/http"
 EMBED_FILES "./web_server/index.html"
 )
