--- a/pet/main/CMakeLists.txt
+++ b/pet/main/CMakeLists.txt
@@ -12,8 +12,21 @@ idf_component_register(SRCS "main.c"
                             "./driver/app_sr/app_sr.c"
                             "./driver/app_url_encode/app_url_encode.c"
                             "./driver/http/http_tts.c"
+                            "./driver/timer/app_timer.c"
 
 
-INCLUDE_DIRS "." "./WIFI" "./dns_server" "./web_server"   "./driver/hx711" "./driver/motor" "./driver/key" "./driver/ws2812" "./driver/audio" "./driver/spiffs" "./driver/app_sr" "./driver/app_url_encode" "./driver/http"
+INCLUDE_DIRS "." "./WIFI" 
+            "./dns_server"
+            "./web_server"   
+            "./driver/hx711" 
+            "./driver/motor" 
+            "./driver/key" 
+            "./driver/ws2812" 
+            "./driver/audio" 
+            "./driver/spiffs" 
+            "./driver/app_sr" 
+            "./driver/app_url_encode" 
+            "./driver/http"
+            "./driver/timer"
 EMBED_FILES "./web_server/index.html"
 )
