增加逻辑代码

--- a/pet/main/CMakeLists.txt
+++ b/pet/main/CMakeLists.txt
@@ -1,5 +1,6 @@
 idf_component_register(SRCS "main.c" 
                             "./WIFI/ConnectWIFI.c" 
+                            "./WIFI/wifi_status_manager.c"
                             "./dns_server/my_dns_server.c" 
                             "./web_server/webserver.c" 
                             "./driver/hx711/hx711.c" 
@@ -14,6 +15,10 @@ idf_component_register(SRCS "main.c"
                             "./driver/http/http_tts.c"
                             "./driver/http/http_client.c"
                             "./driver/timer/app_timer.c"
+                            "./driver/timer/time_utils.c"
+                            "./driver/feeding/feeding_manager.c"
+                            "./driver/feeding/feeding_http_handler.c"
+                            "./driver/device/device_manager.c"
                             "./driver/mqtt_client/my_mqtt_client.c"
 
 
@@ -30,6 +35,8 @@ INCLUDE_DIRS "." "./WIFI"
             "./driver/app_url_encode" 
             "./driver/http"
             "./driver/timer"
+            "./driver/feeding"
+            "./driver/device"
             "./driver/mqtt_client"
 EMBED_FILES "./web_server/index.html"
 EMBED_TXTFILES
