--- a/pet/main/CMakeLists.txt
+++ b/pet/main/CMakeLists.txt
@@ -20,6 +20,7 @@ idf_component_register(SRCS "main.c"
                             "./driver/feeding/feeding_http_handler.c"
                             "./driver/device/device_manager.c"
                             "./driver/mqtt_client/my_mqtt_client.c"
+                            "./driver/websocket_client/websocket_client.c"
 
 
 INCLUDE_DIRS "." "./WIFI" 
@@ -38,6 +39,7 @@ INCLUDE_DIRS "." "./WIFI"
             "./driver/feeding"
             "./driver/device"
             "./driver/mqtt_client"
+            "./driver/websocket_client"
 EMBED_FILES "./web_server/index.html"
 EMBED_TXTFILES
         "tuya_root_cert.pem"
