--- a/pet/main/idf_component.yml
+++ b/pet/main/idf_component.yml
@@ -6,6 +6,7 @@ dependencies:
   chmorgan/esp-audio-player: "~1.0.7"       # 音频播放
   chmorgan/esp-file-iterator: "1.0.0"       # 获取文件
   espressif/led_strip: "^2.5.3"
+  espressif/esp_websocket_client: "*"
   ## Required IDF version
   idf:
     version: ">=4.1.0"
