增加版本查询，版本管理等等功能 OTA功能测试完成

--- a/pet/main/CMakeLists.txt
+++ b/pet/main/CMakeLists.txt
@@ -21,6 +21,7 @@ idf_component_register(SRCS "main.c"
                             "./driver/device/device_manager.c"
                             "./driver/mqtt_client/my_mqtt_client.c"
                             "./driver/websocket_client/websocket_client.c"
+                            "version.c"
 
 
 INCLUDE_DIRS "." "./WIFI" 
